[gd_scene load_steps=2 format=2]

[ext_resource path="res://systems/dependency/ui_elements/input_image/InputImage.gd" type="Script" id=1]

[node name="InputImage" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 218 )
rect_pivot_offset = Vector2( -349, -349 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Name"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 1024.0
margin_bottom = 53.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 479.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "image path"

[node name="Browse" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 483.0
margin_right = 541.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 0 )
size_flags_horizontal = 0
text = "browse"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 545.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Image" type="TextureRect" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 1024.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 150 )
expand = true
stretch_mode = 6

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 222.0
margin_top = 49.0
margin_right = 612.0
margin_bottom = 320.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
current_dir = "/media/mayank/Assets/Software Dev/world building software"
current_path = "/media/mayank/Assets/Software Dev/world building software/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Browse" to="." method="_on_Browse_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
